<resources>
    <string name="app_name">EcoKids</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ecokids</string>
    <string name="nav_header_subtitle">ecokids@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_metas">Metas</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_nome_cadastro">Nome</string>
    <string name="prompt_password">Senha</string>
    <string name="checkBox_senha">Mostrar Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_registrar">Registrar</string>
    <string name="welcome">"Bem-Vindo!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="action_voltar">Voltar</string>

    <string name="user_name_key">Nome do Usuário</string>
    <string name="user_email_key">E-mail do Usuário</string>
</resources>