<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="110dp"
        android:foreground="@drawable/img_1" />

    <EditText
        android:id="@+id/edt_nome_cadastro"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jua"
        android:hint="@string/prompt_nome_cadastro"
        android:inputType="text" />

    <EditText
        android:id="@+id/edt_email_cadastro"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jua"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edt_senha_cadastro"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jua"
        android:hint="@string/prompt_password"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/ckb_mostrar_senha"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="70dp"
        android:fontFamily="@font/jua"
        android:text="@string/checkBox_senha" />


    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/jua"
        android:text="@string/action_registrar" />

    <ProgressBar
        android:id="@+id/psb_login"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_voltar"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/jua"
        android:text="@string/action_voltar"
        app:icon="@drawable/arrow_back_24dp_fill0_wght400_grad0_opsz24" />


</LinearLayout>


